--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-image: linear-gradient(90deg, #74D7BB, #53C8B6, #35A99C);
+    background-image: linear-gradient( 90deg, #74D7BB, #53C8B6, #35A99C);
     background-color: black;
 }
 
@@ -59,7 +59,7 @@ body {
 
 /* Main Hero Section Styles */
 .hero {
-    background-image: url('d6a58ad8-e072-4e03-8327-044dcdd463d8.JPG');
+    background-image: linear-gradient(rgba(3, 31, 27, 0.75),rgba(4, 21, 24, 0.75)) ,url('d6a58ad8-e072-4e03-8327-044dcdd463d8.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -382,4 +382,38 @@ body {
 
 .blue-text {
     color: #363D73;
+}
+
+.container {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 1000px;
+    margin: auto;
+}
+
+.description {
+    margin-bottom: 20px;
+    
+}
+
+.skills {
+    margin-top: 20px;
+}
+
+.skill {
+    margin-bottom: 15px;
+}
+
+.progress-bar {
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 10px;
+}
+
+.progress {
+    background-color: #76c7c0;
+    height: 100%;
 }
